# vits_web_demo

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_conda  Dockerfile_py  LICENSE  README.md  app.py  build.sh  build_docker.sh  conda.yml  conda_env_cpu.yml  conda_rq.txt  dockerfile  dockerfile.mul  dockerfile.ut  environment.yml  extract_w.py  inference.ipynb  init_jptalk.py  main.py  pyproject.toml  re.txt  requirements.txt  requirements_deploy.txt  run.sh  setup.sh  tmp.sh  tts_model_wrapper.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build_pyopenjtalk.yml  docker-image.yml  test.yml  test_install.yml
app/: __init__.py  app.py  common.py  config.py  init_jptalk.py  main.py  requirements.txt  run.sh  util.py  utils.py
app/monotonic_align/: __init__.py  core.pyx
app/text/: __init__.py  cleaners.py  symbols.py
asset/demo/: dockerfile  inference.ipynb
asset/script/: docker_start.sh  run.sh  start.sh  start_in_server.sh
dml/: README.md  config.py  main.py  requirements.txt  util.py
dml/app/: main.py
dml/app/utils/: config.py  util.py
dml_gui/: README.md  requirements.txt
dml_gui/app/: main.py
dml_gui/app/text/: __init__.py  cleaners.py
dml_gui/app/utils/: config.py
export/: README.md  example_config.json  export.sh  infer.sh  requirements.txt  setup.sh  test.txt
export/vits/: export_onnx.py  inference.py  inference_onnx.py
export/vits/text/: cleaners.py
gr/: .dockerignore  Dockerfile  README.md  setup.sh
gr/app/: config.py  init_jptalk.py  main.py
gr/app/text/: __init__.py
gr_web_app/: Dockerfile  build.sh  pyproject.toml
gr_web_app/app/: config.py
gr_web_app/app/text/: __init__.py  (+1 more)
mess/: build_docker.sh
monotonic_align/: __init__.py
myutil/: data_entity.py  extract_w.py  find_file.py
test/: dml.py  requirements.txt  run.sh  tts.py  util.py  vits_onnx.ipynb  zip_wheel.py  zipfile.py
test/text/: __init__.py
text/: __init__.py  cleaners.py  symbols.py
util/: extract_w.py
