[tool.poetry]
name = "vits-web-demo"
version = "0.1.0"
description = ""
authors = ["ccds"]
readme = "README.md"
packages = [{include = "vits_web_demo"}]

[[tool.poetry.source]]
name = "pytorch"
url =   "https://download.pytorch.org/whl/cpu"
secondary = true


[tool.poetry.dependencies]
python = "^3.9.0"
pyopenjtalk = "^0.3.0"
torch = { version = "=1.13.1", source = "pytorch" }
typing-extensions = "^4.4.0"
gradio = "^3.10.1"
librosa = "^0.9.2"
unidecode = "^1.3.6"
loguru = "^0.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
