[tool.poetry]
name = "vits-web-demo"
version = "0.1.0"
description = ""
authors = ["Chocolatedesue "]
readme = "README.md"
packages = [{include = "vits_web_demo"}]


# [tool.poe.tasks]
# ## PyTorch with CUDA 11.1. If PyTorch is imported first, importing Tensorflow will detect CUDA + cuDNN bundled with PyTorch
# ## Run with the command "poe force-cuda11"
# ## See https://github.com/python-poetry/poetry/issues/2543
# force-torch-cpu = "pip3 install torch==1.13.1 --extra-index-url https://download.pytorch.org/whl/cpu"


[tool.poetry.dependencies]
python = "^3.9.0"
pyopenjtalk = "^0.3.0"
# torch = { version = "=1.13.1", source = "pytorch" }
typing-extensions = "^4.4.0"
gradio = "^3.10.1"
librosa = "^0.9.2"
unidecode = "^1.3.6"
loguru = "^0.6.0"
cython = "^0.29.33"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

