[tool.poetry]
name = "vits-onnx"
version = "0.1.0"
description = ""
authors = ["ccds <ccdesue@163.com>"]
readme = "README.md"
packages = [{include = "vits_onnx"}]

[tool.poetry.dependencies]
python = "^3.9"
gradio = "^3.16.1"
loguru = "^0.6.0"
onnxruntime = "^1.13.1"
pyopenjtalk = "^0.3.0"
unidecode = "^1.3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
